tests/Asm/negative/test003.jva
-- no matching case branch

type list {
  nil : list;
  cons : * -> list -> list;
}

function f(list) {
  push arg[0];
  case list {
    cons: ret
  };
}

function main() {
  alloc nil;
  tcall f;
}
